src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");

:root {
  --dark-background-color: #202142;
  --primary-color: #ff6a95;
  --white: #fff;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Poppins", sans-serif;
  background-color: var(--dark-background-color);
  color: var(--white);
  line-height: 1.6;
}

ul {
  list-style: none;
}

.container {
  max-width: 48rem;
  margin: auto;
  padding: 0 1.25rem;
}

.rating li,
.num-display {
  position: relative;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0.625rem;
  text-align: center;
  border-radius: 50%;
  font-size: 1.188rem;
  border: 1px #eee solid;
  transition: 0.3s;
}

.rating li:hover,
.num-display {
  background: var(--primary-color);
  color: var(--white);
}

.num-display {
  position: absolute;
  top: -10px;
  left: -10px;
}

[type="radio"] {
  opacity: 0;
}

[type="radio"]:checked ~ label {
  background: var(--primary-color);
  color: var(--white);
}

.edit {
  right: 2.5rem;
}

.message {
  padding-top: 0.625rem;
  text-align: center;
  color: #663399;
}

.about-link {
  display: flex;
  justify-content: flex-end;
}

.about-link a {
  color: var(--white);
  cursor: pointer;
}

.about-link a:hover {
  color: var(--primary-color);
}

.about h1 {
  margin-bottom: 1.25rem;
}

.about p {
  margin: 0.625rem 0;
}

